# SimpleVideoPlayer

./: CMakeLists.txt  README.md  main.cc
